fix: about descrip text align to center

--- a/styles/about.css
+++ b/styles/about.css
@@ -17,5 +17,5 @@
 .about-descrip-container {
   display: flex;
   width: 100ch;
-  text-align: left;
+  text-align: center;
 }
